# HLS_XRT_resize_normalize

./: .gitignore  README.md  _hls_resize_normalize.pc  build.sh  header.hpp  install.sh  main.cpp  main_xrt.cpp  meson.build  meson.build.template  xrt_main.cpp
analyze/: build_compare.sh  build_findrgb.sh  compare_L1_L2.cpp  findrgb.cpp
inc/: hls_resize.hpp  hls_resize_normalize.hpp  timer.hpp
krnl/: run_hls.tcl  settings.tcl  xf_resize_normal_accel.cpp  xf_resize_normal_config.h  xf_resize_normal_tb.cpp
src/: hls_resize.cpp  hls_resize_normalize.cpp
